--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,12 +4,8 @@
   align-items: center;
   justify-content: center;
 
-  background: url(../../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
-
   .title {
-    color: white;
+    color: black;
     margin:0;
     padding:50px 20px;
   }
