Added ExcelJS dependency. This is in favor of support for Office 2013

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="title">
-    Does the app work?
+    Welcome to ExCelery!!!
   </h1>
   <button class=" btn btn-primary">Press this</button>
 </div>
