--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="title">
-    Welcome to ExCelery!!!
+    {{ pathText }}
   </h1>
   <button class=" btn btn-primary">Press this</button>
 </div>
