--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <!-- Page Content  -->
 <div id="content">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-
-        </div>
-    </nav>
+  <div class="container-fluid">
+    <div class="row">
+      
+    </div>
+  </div>
 </div>
