Finally got ExcelJS working with a few examples in code

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -38,7 +38,7 @@
             <div>
               <ul class="collapse list-unstyled" id="wbSubmenu">
                   <li *ngFor="let sheet of sheets">
-                      <a href="#">{{ sheet }}</a>
+                      <a href="#" (click)="openWorkbook(sheet)">{{ sheet }}</a>
                   </li>
               </ul>
             </div>
