--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,23 @@
 <!-- Page Content  -->
 <div class="container-fluid">
   <div *ngIf="currentWorkbook.getWorksheet(1)">
-    <div *ngFor="let header of wsHeaders" (click)="setActiveText(header)">
-    <div class="content-box" [ngClass]="{'active': header===activeTextfield}">
-      <div class="row col-sm-12">
-        {{ header }}
-      </div>
-      <div class="row col-sm-12" *ngIf="header===activeTextfield">
-        <input class="search-field form-control" [(ngModel)]="activeText"
-        name="activeText" placeholder="Search away!" [ngClass]="{'active': header===activeTextfield}">
+    <div>
+      <input class="search-field form-control" [(ngModel)]="searchText"
+      name="searchText" placeholder="Header Search" [ngClass]="{'active': header===activeTextfield}" (click)="headerSearchbarClicked()">
+    </div>
+    <div *ngFor="let header of wsHeaders">
+      <div class="content-box" [ngClass]="{'active': header===activeTextfield}" *ngIf="header.toLowerCase().includes(searchText.toLowerCase())">
+        <div class="row col-sm-12">
+          <span>
+            <span (click)="setActiveText(header)" class="cb-title">{{ header }}</span>
+            <i class="fas fa-check-circle check-circle-dark" *ngIf="selectedTitles.includes(header)" (click)="selectTitleClicked(header)"></i>
+            <i class="far fa-check-circle" *ngIf="!selectedTitles.includes(header)" (click)="selectTitleClicked(header)"></i>
+          </span>
+        </div>
+        <div class="row col-sm-12" *ngIf="header===activeTextfield">
+          <input class="search-field form-control" [(ngModel)]="activeText"
+          name="activeText" placeholder="Search away!" [ngClass]="{'active': header===activeTextfield}">
+        </div>
       </div>
     </div>
   </div>
