Excel service can now read all columns and get the data. Issue will be added in a bit

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -64,6 +64,11 @@ input {
   color: $sidebar-color2-em;
 }
 
+.check-circle-light:hover{
+  transition: all 0.3s;
+  color: $sidebar-color2-em;
+}
+
 .search-field{
   transition: all 0.4s;
   border-width: 0;
