--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
           <span>
             <span (click)="setActiveText(header)" class="cb-title">{{ header }}</span>
             <i class="fas fa-check-circle check-circle-dark" *ngIf="selectedTitles.includes(header)" (click)="selectTitleClicked(header)"></i>
-            <i class="far fa-check-circle" *ngIf="!selectedTitles.includes(header)" (click)="selectTitleClicked(header)"></i>
+            <i class="far fa-check-circle check-circle-light" *ngIf="!selectedTitles.includes(header)" (click)="selectTitleClicked(header)"></i>
           </span>
         </div>
         <div class="row col-sm-12" *ngIf="header===activeTextfield">
