--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -24,6 +24,7 @@ input {
   border-style: solid;
   transition: all 0.9s;
   margin: 0.5em;
+  padding: 0.3em;
   cursor: pointer;
   border-radius: 5px;
   background-color: #fff;
@@ -85,4 +86,8 @@ input {
 
 .search-field:focus{
   border-color: $sidebar-color2 !important;
+}
+
+.field-cell{
+  padding-left: 0.7em;
 }
