--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <ul class="list-unstyled components">
-        <li class="active">
+        <li>
             <a href="#modeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                 <i class="fas fa-vector-square"></i>
                 Mode
@@ -27,10 +27,20 @@
             </ul>
         </li>
         <li>
-            <a href="#">
-                <i class="fas fa-briefcase"></i>
-                About
+            <a href="#modeOpen" data-toggle="collapse" class="dropdown-toggle">
+                <i class="far fa-folder-open"></i>
+                Open Files
             </a>
+            <ul class="collapse list-unstyled" id="modeOpen">
+              <li *ngFor="let wb of openWorkbooks">
+                <div>
+                  <a href="#">
+                    <i class="fas fa-times close-button" (click)="closeTab(wb)"></i>
+                    <span class="file-select" (click)="openTab(wb)">{{ wb }}</span>
+                  </a>
+                </div>
+              </li>
+            </ul>
             <a href="#wbSubmenu" data-toggle="collapse" aria-expanded="false" (click)="excelButtonClicked()" class="dropdown-toggle">
                 <i class="far fa-file-excel"></i>
                 Workbooks
@@ -38,7 +48,13 @@
             <div>
               <ul class="collapse list-unstyled" id="wbSubmenu">
                   <li *ngFor="let wb of workbooks">
-                      <a href="#" (click)="openWorkbook(wb)">{{ wb }}</a>
+                    <div [ngClass]="{'file-opened': openWorkbooks.includes(wb)}">
+                      <a href="#">
+                        <span class="file-select" (click)="openWorkbook(wb)">
+                          {{ wb }} <i class="far fa-folder-open" *ngIf="openWorkbooks.includes(wb)"></i>
+                        </span>
+                      </a>
+                    </div>
                   </li>
               </ul>
             </div>
