--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -14,6 +14,7 @@ $sidebar-color: #1ee89b;
 $sidebar-color-em: #1cd991;
 $sidebar-text-color: #333;
 $sidebar-highlight-text-color: #333;
+$sidebar-color2-em: #cc6be3;
 
 a,
 a:hover,
@@ -21,6 +22,28 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+}
+
+.file-select{
+  transition: all 0.3s;
+}
+
+.file-select:hover{
+  color: $sidebar-color2-em;
+}
+
+.close-button{
+  transition: all 0.3s;
+}
+
+.close-button:hover{
+  color: $sidebar-color2-em;
+}
+
+.file-opened{
+  color: #666;
+  pointer-events: none;
+  cursor: default;
 }
 
 .navbar {
