--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,10 @@ html, body {
   margin: 0;
   padding: 0;
 
-  height: 100%;
+
+  height: 100vh;
+  width: 100vw;
+  overflow: auto;
 }
 
 .padding-0{
