Basically copied home component to copymode and added routes

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -19,10 +19,13 @@
             </a>
             <ul class="collapse list-unstyled" id="modeSubmenu">
                 <li>
-                    <a href="#">Excel</a>
+                    <a [routerLink]="['/']">Excel</a>
                 </li>
                 <li>
                     <a href="#">PureCSV</a>
+                </li>
+                <li>
+                  <a [routerLink]="['/copymode']">Copy Mode</a>
                 </li>
             </ul>
         </li>
