Added unsubscribe and copy is now the main component. I really should be creating branches

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div *ngIf="!currentWorkbook.getWorksheet(1)">
-    <h4 class="empty-text">No workbooks open currently. Use the sidebar to get started!</h4>
+    <h4 class="empty-text">No workbooks open currently. Use the sidebar to get started.</h4>
   </div>
 
   <div class="row">
