Can now load files, and the save feature has been decoupled

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -39,7 +39,7 @@
           <!-- Content -->
           <div class="col">
             <div class="content-box-purple selectable row justify-content-center"
-            *ngIf="editCount >= 1 && primaryKey.split(':')[0] == workbook.filename" (click)="saveFile()">
+            *ngIf="editCount >= 1 && primaryKey.split(':')[0] == workbook.filename" (click)="saveFile(workbook)">
               Save
             </div>
           </div>
