--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -30,6 +30,10 @@
             </ul>
         </li>
         <li>
+            <a href="#" (click)="refreshFiles()">
+                <i class="fas fa-sync"></i>
+                Load Files
+            </a>
             <a href="#modeOpen" data-toggle="collapse" class="dropdown-toggle">
                 <i class="far fa-folder-open"></i>
                 Open Files
